objects/Event_Pay_Gateway__c.object
<CustomObject>
    <description>This table defines the payment gateway for event for different payment types.  (online booking, at gate booking)</description>
    <fields>
        <fullName>Accept_Min_Max_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Min Max Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Event_Pay_Gateway</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Min_amount_to_accept__c</fullName>
        <label>Min amount to accept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Gateway__c</fullName>
        <label>Pay Gateway</label>
        <referenceTo>Pay_Gateway__c</referenceTo>
        <relationshipName>Event_Pay_Gateway</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScanAttendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Event Pay Gateway</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Events__c</columns>
        <columns>Pay_Gateway__c</columns>
        <columns>Registration_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPG-{000000}</displayFormat>
        <label>Event Pay Gateway ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Event Pay Gateway</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>